fix: import issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <!-- Header Section -->
-        <div class="absolute right-10" id="editabe-button-section">
+        <div class="absolute right-10" id="editable-button-section">
             <!-- Dynamic save button -->
         </div>
         <header class="dashboard-header">
