feat: implement community editing mode with dynamic channel management

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <!-- Slack Participation -->
             <section class="card slack-section">
                 <h2><i class="fab fa-slack"></i> Community Participation</h2>
+                <div class="edit-section" id="community-edit-section"></div>
                 <div id="slack-info">
                     <p class="slack-description">Active in organization communication channels</p>
                     <div id="slack-channels" class="channel-list">
